package com.hcf.head.first.design.pattern.chapter02.observer;

public interface Observer {
    void update(float temperature, float humidity, float pressure);
}
